fixed game class, some tests, and fixed card tests